resolve duplicate ids

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -2,7 +2,7 @@
   "InviteToOrgMessage": "You can add personal message to the invitation email.",
   "_aboutMemberTitle.comment": "Member profile sidebar, about user title.",
   "_accountSettings.comment": "Main org dropdown menu",
-  "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "_addServiceIntegrationGroupInfo.comment": "Group Info Panel: link to add an integration to the current group",
   "_addServiceIntegrations.comment": "Main org dropdown menu",
   "_addTeamMembersLinkIntro.comment": "Link to the members admin within 'Well done' intro screen.",
   "_blockquoteExample.comment": "Markdown: blockquote example",
@@ -54,7 +54,8 @@
   "_introTextSearch.comment": "Intro search text.",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "_introTextWelcome.comment": "Intro welcome text.",
-  "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "_inviteMoreToGroup.comment": "No Content: invite members to the group",
+  "_inviteMoreToGroupGroupInfo.comment": "Group Info Panel: invite members to the group",
   "_inviteNewMembers.comment": "Main org dropdown menu",
   "_joinVideoConference.comment": "Sidebar: link to join a video conference",
   "_learnMoreLink.comment": "learn more link",
@@ -106,6 +107,8 @@
   "_skipIntro.comment": "Intro footer skip button",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "_switchOrganizations.comment": "Main org dropdown menu",
+  "_tasksHeader.comment": "NLP tasks list dialog title.",
+  "_tasksTooltip.comment": "Message NLP task button tooltip.",
   "_tutorial.comment": "Main org dropdown menu",
   "_unpinMessage.comment": "Message menu dropdown.",
   "_unsent.comment": "message delivery status in tooltip",
@@ -113,7 +116,7 @@
   "accountSettings": "Account Settings",
   "addGroupDescription": "Add a group description here…",
   "addMembers": "Add members…",
-  "addServiceIntegration": "Add service integration",
+  "addServiceIntegrationGroupInfo": "Add service integration",
   "addServiceIntegrations": "Add Service Integrations",
   "addTeamMembersLinkIntro": "add your team members",
   "altenativeBrowser": "Alternatively you can use Grape with {browsers} to enjoy the full experience.",
@@ -217,6 +220,7 @@
   "inviteMembers": "Invite members",
   "inviteMembersNow": "Invite members now",
   "inviteMoreToGroup": "Invite more members to this group",
+  "inviteMoreToGroupGroupInfo": "Invite more members to this group",
   "inviteNewMembers": "Invite new members",
   "inviteToGroup": "Invite to group",
   "inviteToOrgError": "Enter valid e-mail addresses separated by a comma.",
@@ -343,7 +347,8 @@
   "startNewConversation": "Start a new conversation",
   "supportAndFaq": "Support & FAQ",
   "switchOrganizations": "Switch Organizations",
-  "tasks": "Tasks",
+  "tasksHeader": "Tasks",
+  "tasksTooltip": "Tasks",
   "trainingModeHintWithLink": "IA: This system is in training mode ({learnMoreLink})",
   "tryToReconnect": "We'll try to reconnect in",
   "tryingToReconnect": "Trying to reconnect…",
