--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -85,8 +85,9 @@
   "_sent.comment": "message delivery status in tooltip",
   "read": "Leído",
   "_read.comment": "message delivery status in tooltip",
-  "tasks": "Tareas",
+  "tasksTitle": "Tareas",
   "_tasks.comment": "NLP tasks list dialog title.",
+  "tasksTooltip": "Tareas",
   "createTask": "Crear una tarea",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "Otros servicios",
@@ -100,8 +101,10 @@
   "welcomeToGroup": "Bienvenido a {group}",
   "inviteMoreToGroup": "Invitar otras miembros a este grupo",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "inviteMoreToGroupGroupInfo": "Invitar otras miembros a este grupo",
   "addServiceIntegration": "Añadir una integración de servicios",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "addServiceIntegrationGroupInfo": "Añadir una integración de servicios",
   "welcomeToPm": "Conversación privada con {partner}",
   "pmIntro": "Esta es una conversación privada entre usted y su {partner}.{br} Las conversaciones privadas sólo son accesibles para ustedes dos.",
   "deleteMessagesQuestion": "¿Borrar el mensaje seleccionado?",
