--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -85,8 +85,9 @@
   "_sent.comment": "message delivery status in tooltip",
   "read": "Lire",
   "_read.comment": "message delivery status in tooltip",
-  "tasks": "Tâches",
-  "_tasks.comment": "NLP tasks list dialog title.",
+  "tasksTitle": "Tâches",
+  "_tasksTitle.comment": "NLP tasks list dialog title.",
+  "tasksTooltip": "Tâches",
   "createTask": "Créer une tâche",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "Autres services",
@@ -100,8 +101,10 @@
   "welcomeToGroup": "Bienvenue à {group}",
   "inviteMoreToGroup": "Inviter d'autres membres à ce groupe",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "inviteMoreToGroupGroupInfo": "Inviter d'autres membres à ce groupe",
   "addServiceIntegration": "Ajouter une intégration de services",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "addServiceIntegrationGroupInfo": "Ajouter une intégration de services",
   "welcomeToPm": "Conversation privée avec {partner}",
   "pmIntro": "Il s'agit d'une conversation privée entre vous et {partner}.{br}Les conversations privées ne sont accessibles qu'à vous deux.",
   "deleteMessagesQuestion": "Effacer le message sélectionné ?",
