--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -85,8 +85,9 @@
   "_sent.comment": "message delivery status in tooltip",
   "read": "Letto",
   "_read.comment": "message delivery status in tooltip",
-  "tasks": "Attività",
-  "_tasks.comment": "NLP tasks list dialog title.",
+  "tasksTitle": "Attività",
+  "_tasksTitle.comment": "NLP tasks list dialog title.",
+  "tasksTooltip": "Attività",
   "createTask": "Creare un'attività",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "Altri servizi",
@@ -100,8 +101,10 @@
   "welcomeToGroup": "Benvenuti a {group}",
   "inviteMoreToGroup": "Invita altri membri a questo gruppo",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "inviteMoreToGroupGroupInfo": "Invita altri membri a questo gruppo",
   "addServiceIntegration": "Aggiungi l'integrazione dei servizi",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "addServiceIntegrationGroupInfo": "Aggiungi l'integrazione dei servizi",
   "welcomeToPm": "Conversazione privata con {partner}",
   "pmIntro": "Questa è una conversazione privata tra voi e {partner}.{br}Le conversazioni private sono accessibili ai soli partecipanti.",
   "deleteMessagesQuestion": "Cancella il messaggio selezionato?",
