--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -85,8 +85,9 @@
   "_sent.comment": "message delivery status in tooltip",
   "read": "Przeczytaj",
   "_read.comment": "message delivery status in tooltip",
-  "tasks": "Zadania",
-  "_tasks.comment": "NLP tasks list dialog title.",
+  "tasksTitle": "Zadania",
+  "_tasksTitle.comment": "NLP tasks list dialog title.",
+  "tasksTooltip": "Zadania",
   "createTask": "Stwórz zadanie",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "Więcej usług",
@@ -100,8 +101,10 @@
   "welcomeToGroup": "Witamy w {group}",
   "inviteMoreToGroup": "Zaproś więcej użytkowników do tej grupy",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "inviteMoreToGroupGroupInfo": "Zaproś więcej użytkowników do tej grupy",
   "addServiceIntegration": "Dodaj integrację usług",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "addServiceIntegrationGroupInfo": "Dodaj integrację usług",
   "welcomeToPm": "Prywatna konwersacja z {partner}",
   "pmIntro": "To jest prywatna konwersacja między Tobą a {partner}.{br}Prywatne rozmowy są dostępne tylko dla was dwóch.",
   "deleteMessagesQuestion": "Skasować wybraną wiadomość?",
