--- a/i18n/translations/uk.json
+++ b/i18n/translations/uk.json
@@ -85,8 +85,9 @@
   "_sent.comment": "message delivery status in tooltip",
   "read": "Читати",
   "_read.comment": "message delivery status in tooltip",
-  "tasks": "Завдання",
-  "_tasks.comment": "NLP tasks list dialog title.",
+  "tasksTitle": "Завдання",
+  "_tasksTitle.comment": "NLP tasks list dialog title.",
+  "tasksTooltip": "Завдання",
   "createTask": "Створити Завдання",
   "_createTask.comment": "NLP create task dialog title.",
   "moreServices": "Більше Послуг",
@@ -100,8 +101,10 @@
   "welcomeToGroup": "Ласкаво просимо до {group}",
   "inviteMoreToGroup": "Запросіть більше учасників до цієї групи",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
+  "inviteMoreToGroupGroupInfo": "Запросіть більше учасників до цієї групи",
   "addServiceIntegration": "Додайте інтеграцію служби",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
+  "addServiceIntegrationGroupInfo": "Додайте інтеграцію служби",
   "welcomeToPm": "Приватна розмова з {partner}",
   "pmIntro": "Це приватна розмова між вами та {partner}.\n{br}Приватні розмови доступні лише вам двом.",
   "deleteMessagesQuestion": "Видалити вибране повідомлення?",
