make strings in NCD translatable

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -78,6 +78,20 @@
   "_manageMembers.comment": "Main org dropdown menu",
   "_membersList.comment": "Group Info Panel: link to members list of the current grou",
   "_moreServices.comment": "More Services button in message nlp create task dialog.",
+  "_ncdCreateRoomPeopleSearchNotFound.comment": "shown when people search in create room dialog returns 0 results",
+  "_ncdGroupDescriptionDescription.comment": "text area description",
+  "_ncdGroupDescriptionLabel.comment": "text area label",
+  "_ncdGroupMembersDescription.comment": "description for group members input",
+  "_ncdGroupMembersLabel.comment": "group members input label",
+  "_ncdGroupNameDescription.comment": "text field description",
+  "_ncdGroupNameLabel.comment": "text field label",
+  "_ncdGroupPrivateHelpText.comment": "switch help text",
+  "_ncdGroupPrivateLabel.comment": "switch label",
+  "_ncdGroupSearchNotFound.comment": "shown when groups search returns 0 results",
+  "_ncdGroupTab.comment": "tab title for group tab",
+  "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
+  "_ncdPersonTab.comment": "tab title for person tab",
+  "_ncdTitle.comment": "title for new conversation dialog",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
   "_notificationSettingAll.comment": "Notification setting name.",
   "_notificationSettingAnyMention.comment": "Notification setting name.",
@@ -278,6 +292,35 @@
   "muteAllNotifications": "Block all notifications for this group on all your devices",
   "muteAllNotificationsHint": "This group is completely muted on all your devices. No more rings and beeps coming from {channel} - but you can still come back anytime to check it out for new messages. If you want to leave the group and remove it from your sidebar, {leaveButton}",
   "muteGroupTitle": "Mute this Group",
+  "ncdCreateGroup": "Create a new group",
+  "ncdCreateRoomPeopleSearchNotFound": "No member named&nbsp;{searchTerm}&nbsp;could be found.",
+  "ncdGroupCreateButton": "Create group",
+  "ncdGroupCreateCancelButton": "Cancel",
+  "ncdGroupDescriptionDescription": "Help others understand the purpose of this group.",
+  "ncdGroupDescriptionLabel": "Description",
+  "ncdGroupMembersDescription": "Consider adding other people for lively discussions. You can also do this later.",
+  "ncdGroupMembersLabel": "Members",
+  "ncdGroupMembersSelected": "Selected members:",
+  "ncdGroupNameDescription": "Should represent the topic of the group.",
+  "ncdGroupNameLabel": "Group name",
+  "ncdGroupPrivateHelpText": "Only group members can view a private group and invite other people to join.",
+  "ncdGroupPrivateLabel": "Make group private",
+  "ncdGroupSearchLabel": "Group search",
+  "ncdGroupSearchNotFound": "Nice group name, but unfortunately nobody else created a group named like this.",
+  "ncdGroupSearchPlaceholder": "Search for a group ...",
+  "ncdGroupTab": "Group",
+  "ncdInPmWithEveryPerson1": "You're a very communicative person!",
+  "ncdInPmWithEveryPerson2": "All members are already chatting with you. Keep in touch with them.",
+  "ncdJoinGroupHeader": "Join an existing group or create a new one. Groups are best organized around a topic.",
+  "ncdMemberOfEachGroup1": "You won't miss any chat going on!",
+  "ncdMemberOfEachGroup2": "You're already part of every existing group here, there is nothing that can be publicly said without your notice. You may want to conversations going.",
+  "ncdNoGroups1": "You're the first!",
+  "ncdNoGroups2": "No one else has created a group yet. Don't be too stressed and just create the first group around a topic that comes to your mind. You can invite other people to this group later.",
+  "ncdPeopleSearchNotFound": "Nice name, but unfortunately nobody could be found.",
+  "ncdPersonSearchLabel": "Person search",
+  "ncdPersonSearchPlaceholder": "Search for a person ...",
+  "ncdPersonTab": "Person",
+  "ncdTitle": "New conversation",
   "newConversation": "New Conversation",
   "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}} }",
   "newImportantMessagesOne": "new important message",
