--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -130,6 +130,7 @@
   "accountSettings": "Account Settings",
   "addGroupDescription": "Add a group description here…",
   "addMembers": "Add members…",
+  "addServiceIntegration": "Add Service Integrations",
   "addServiceIntegrationGroupInfo": "Add service integration",
   "addServiceIntegrations": "Add Service Integrations",
   "addTeamMembersLinkIntro": "add your team members",
