Fix german translation

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -410,12 +410,12 @@
   "ncdGroupTab": "Gruppe",
   "ncdInPmWithEveryPerson1": "Sie sind eine sehr kommunikative Person!",
   "ncdInPmWithEveryPerson2": "Alle Mitglieder schreiben bereits mit Ihnen.",
-  "ncdJoinGroupHeader": "Treten sie einer Gruppe bei oder erstellen Sie eine neue. Am besten ist es Gruppen rund um eine Thema zu organsieren.",
+  "ncdJoinGroupHeader": "Treten Sie einer Gruppe bei oder erstellen Sie eine neue. Am besten ist es, Gruppen rund um eine Thema zu organisieren.",
   "ncdMemberOfEachGroup1": "Sie verpassen nichts.",
-  "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied jeder Gruppe. Ihnen entgeht nichts was öffentliche gesagt wird.",
+  "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied jeder Gruppe. Ihnen entgeht nichts, was öffentlich gesagt wird.",
   "ncdNoGroups1": "Sie sind die/der Erste",
-  "ncdNoGroups2": "Es hat noch niemand eine Gruppe erstellt. Erstellen Sie doch einfach eine Gruppe rund um irgendein Thema das Ihnen einfällt. Sie können später noch Personen einladen.",
-  "ncdPeopleSearchNotFound": "Nice name, but unfortunately nobody could be found.",
+  "ncdNoGroups2": "Es hat noch niemand eine Gruppe erstellt. Erstellen Sie doch einfach eine Gruppe rund um irgendein Thema, das Ihnen einfällt. Sie können später noch Personen einladen.",
+  "ncdPeopleSearchNotFound": "Schöner Name, aber leider konnte niemand gefunden werden.",
   "ncdPersonSearchLabel": "Personensuche",
   "ncdPersonSearchPlaceholder": "Nach Person suchen ...",
   "ncdPersonTab": "Person",
