Improvements and handled edge case when organization have no groups to join

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -9,6 +9,7 @@
   "_blockquotes.comment": "Title",
   "_buttonContinue.comment": "Intro button continue.",
   "_clickHere.comment": "Link used inline in the middle of a sentence.",
+  "_closeTakeoverDialog.comment": "aria-label for close button in takeover dialog component",
   "_codeSnippets.comment": "Title",
   "_codeSnippetsBlockExample.comment": "Markdown: code block example",
   "_codeSnippetsInlineExample.comment": "Markdown: inline code example",
@@ -144,6 +145,7 @@
   "clickToTryAgain": "click here to try again",
   "close": "Close",
   "closeLower": "close",
+  "closeTakeoverDialog": "Close",
   "codeSnippets": "Code Snippets",
   "codeSnippetsBlockExample": "This is a Code Block",
   "codeSnippetsInlineExample": "This is `Inline` Code",
@@ -317,7 +319,7 @@
   "ncdMemberOfEachGroup2": "You're already part of every existing group here, there is nothing that can be publicly said without your notice. You may want to conversations going.",
   "ncdNoGroups1": "You're the first!",
   "ncdNoGroups2": "No one else has created a group yet. Don't be too stressed and just create the first group around a topic that comes to your mind. You can invite other people to this group later.",
-  "ncdPeopleSearchNotFound": "Nice name, but unfortunately nobody could be found.",
+  "ncdPeopleSearchNotFound": "Nice name, but unfortunately nobody in {orgName} could be found.",
   "ncdPersonSearchLabel": "Person search",
   "ncdPersonSearchPlaceholder": "Search for a person ...",
   "ncdPersonTab": "Person",
