--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -90,6 +90,9 @@
   "_ncdGroupPrivateLabel.comment": "switch label",
   "_ncdGroupSearchNotFound.comment": "shown when groups search returns 0 results",
   "_ncdGroupTab.comment": "tab title for group tab",
+  "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
+  "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
+  "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
   "_ncdPersonTab.comment": "tab title for person tab",
   "_ncdTitle.comment": "title for new conversation dialog",
@@ -296,7 +299,7 @@
   "muteAllNotificationsHint": "This group is completely muted on all your devices. No more rings and beeps coming from {channel} - but you can still come back anytime to check it out for new messages. If you want to leave the group and remove it from your sidebar, {leaveButton}",
   "muteGroupTitle": "Mute this Group",
   "ncdCreateGroup": "Create a new group",
-  "ncdCreateRoomPeopleSearchNotFound": "No member named&nbsp;{searchTerm}&nbsp;could be found.",
+  "ncdCreateRoomPeopleSearchNotFound": "No member named {searchTerm} could be found.",
   "ncdGroupCreateButton": "Create group",
   "ncdGroupCreateCancelButton": "Cancel",
   "ncdGroupDescriptionDescription": "Help others understand the purpose of this group.",
@@ -314,11 +317,14 @@
   "ncdGroupTab": "Group",
   "ncdInPmWithEveryPerson1": "You're a very communicative person!",
   "ncdInPmWithEveryPerson2": "All members are already chatting with you. Keep in touch with them.",
+  "ncdInviteToOrga": "Invite members to {organizationName}",
   "ncdJoinGroupHeader": "Join an existing group or create a new one. Groups are best organized around a topic.",
   "ncdMemberOfEachGroup1": "You won't miss any chat going on!",
   "ncdMemberOfEachGroup2": "You're already part of every existing group here, there is nothing that can be publicly said without your notice. You may want to conversations going.",
   "ncdNoGroups1": "You're the first!",
   "ncdNoGroups2": "No one else has created a group yet. Don't be too stressed and just create the first group around a topic that comes to your mind. You can invite other people to this group later.",
+  "ncdPeopleSearchNoOtherPeople1": "Feeling lonely here?",
+  "ncdPeopleSearchNoOtherPeople2": "It seems that {organizationName} has no other member than you yet, so why not invite someone? As soon as they join, you can come back and start a conversation.",
   "ncdPeopleSearchNotFound": "Nice name, but unfortunately nobody in {orgName} could be found.",
   "ncdPersonSearchLabel": "Person search",
   "ncdPersonSearchPlaceholder": "Search for a person ...",
