Remove duplicate translation string

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -422,6 +422,5 @@
   "ncdPersonSearchLabel": "Personensuche",
   "ncdPersonSearchPlaceholder": "Nach Person suchen ...",
   "ncdPersonTab": "Person",
-  "ncdTitle": "Neue Konversation",
-  "newConversation": "Neue Konversation"
+  "ncdTitle": "Neue Konversation"
 }
