Fix broken invite translation

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -249,7 +249,7 @@
   "inviteToOrganization": "Invite a new person to your organization",
   "joinGroup": "Join a group",
   "joinVideoConference": "Join video conference",
-  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{amountOnePlural}} other {{amountOtherPlural}} }.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}} }.",
   "justInvitedAmountOnePlural": "and one more member",
   "justInvitedAmountOtherPlural": "and {amount} more members",
   "justInvitedCongratulations": "Congratulations! You just invited {user}",
