--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -301,7 +301,7 @@
   "ncdJoinGroupHeader": "Treten Sie einer Gruppe bei oder erstellen Sie eine neue. Am besten ist es, Gruppen rund um eine Thema zu organisieren.",
   "ncdMemberOfEachGroup1": "Sie verpassen nichts.",
   "enterGroupName": "Gruppe benennen ",
-  "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied in jeder Gruppe. Ihnen entgeht nichts, was öffentlich gesagt wird.",
+  "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied in jeder Gruppe. Ihnen entgeht nichts, was öffentlich gesagt wird. Halten Sie die Gespräche am Laufen!",
   "private": "Privat",
   "ncdNoGroups1": "Sie sind die Erste!",
   "public": "Öffentlich",
