Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Stefan Kröner

--- a/i18n/translations/ro.json
+++ b/i18n/translations/ro.json
@@ -185,7 +185,7 @@
   "joinGroup": "Alăturați-vă unui grup",
   "joinVideoConference": "Alăturați-vă conferinței video",
   "_joinVideoConference.comment": "Sidebar: link to join a video conference",
-  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{amountOnePlural}} other {{amountOtherPlural}} }.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}} }.",
   "justInvitedAmountOnePlural": "și încă un membru",
   "justInvitedAmountOtherPlural": "și mai mulți membri {amount}",
   "justInvitedCongratulations": "Felicitări! Tocmai ai invitat {user}",
@@ -438,7 +438,7 @@
   "userIsTyping": "{user} tastează",
   "userProfile": "Profil de utilizator",
   "usersAndUserAreTyping": "{utilizatorii} și {utilizatorul} tastează",
-  "usersAreTyping": "{usersAreTypingUsersAndAmount} {otherersAmount, plural, un {{usersAreTypingOthersAmountOnePlural}} altul {{usersAreTypingOthersAmountOtherPlural}} } {usersAreTypingOthersAmountTyping}",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}} } {usersAreTypingOthersAmountTyping}",
   "usersAreTypingOthersAmountOnePlural": "alte",
   "usersAreTypingOthersAmountOtherPlural": "alții",
   "usersAreTypingOthersAmountTyping": "tastează",
