--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -185,7 +185,7 @@
   "joinGroup": "Присоединиться к группе",
   "joinVideoConference": "Присоединиться к видеоконференции",
   "_joinVideoConference.comment": "Sidebar: link to join a video conference",
-  "justInvited": "{Приглашение Поздравляю} {машина, множественное число, =0 {} один {машинаОнПлюрал}} другой {машинаОнПлюрал}} }.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}} }.",
   "justInvitedAmountOnePlural": "и ещё один участник",
   "justInvitedAmountOtherPlural": "и еще больше членов",
   "justInvitedCongratulations": "Поздравляем! Ты только что пригласил",
@@ -320,7 +320,7 @@
   "_ncdTitle.comment": "title for new conversation dialog",
   "newConversation": "Новое Обращение",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "newImportantMessages": "Количество во множественном числе: одно - другое - другое - другое }",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}} }",
   "newImportantMessagesOne": "новое важное послание",
   "newImportantMessagesOther": "новые важные сообщения",
   "noChannelsToChatIn": "На данный момент у вас нет людей или групп, с которыми можно пообщаться. Присоединяйтесь к группе или начните новый разговор, чтобы повеселиться.",
@@ -438,7 +438,7 @@
   "userIsTyping": "печатает",
   "userProfile": "Профиль пользователя",
   "usersAndUserAreTyping": "...и пользователи печатают..",
-  "usersAreTyping": "{пользователиВводятсяДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругиеДругие } {UsersAreTypingOthersAmountTyping}",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}} } {usersAreTypingOthersAmountTyping}",
   "usersAreTypingOthersAmountOnePlural": "другой сайт",
   "usersAreTypingOthersAmountOtherPlural": "другие",
   "usersAreTypingOthersAmountTyping": "печатают на машинке",
