--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -185,7 +185,7 @@
   "joinGroup": "Gruba katılmak",
   "joinVideoConference": "Video konferansa katılın",
   "_joinVideoConference.comment": "Sidebar: link to join a video conference",
-  "justInvited": "{justInvitedCongratulations} {amount, plural, = 0 {} one {{amountOnePlural}} other {{amountOtherPlural}}}.",
+  "justInvited": "{justInvitedCongratulations} {amount, plural, =0 {} one {{justInvitedAmountOnePlural}} other {{justInvitedAmountOtherPlural}} }.",
   "justInvitedAmountOnePlural": "ve bir üye daha",
   "justInvitedAmountOtherPlural": "ve {amount} üye daha",
   "justInvitedCongratulations": "Tebrikler! Az önce {user} adlı kullanıcıyı davet ettiniz",
@@ -320,7 +320,7 @@
   "_ncdTitle.comment": "title for new conversation dialog",
   "newConversation": "Yeni Görüşme",
   "_newConversation.comment": "*Describe NewConversation*: this is used in Navigation",
-  "newImportantMessages": "{miktar} {miktar, çoğul, bir {{newImportantMessagesOne}} diğer {{newImportantMessagesOther}}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}} }",
   "newImportantMessagesOne": "yeni önemli mesaj",
   "newImportantMessagesOther": "yeni önemli mesajlar",
   "noChannelsToChatIn": "Şu anda sohbet edebileceğiniz kişi veya grubunuz yok. Daha fazla eğlenmek için bir gruba katılın veya yeni bir sohbet başlatın.",
@@ -438,7 +438,7 @@
   "userIsTyping": "{user} yazıyor",
   "userProfile": "Kullanıcı profili",
   "usersAndUserAreTyping": "{users} ve {user} yazıyor",
-  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, bir {{usersAreTypingOthersAmountOnePlural}} diğer {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingOthersAmountTyping}",
+  "usersAreTyping": "{usersAreTypingUsersAndAmount} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}} } {usersAreTypingOthersAmountTyping}",
   "usersAreTypingOthersAmountOnePlural": "diğer",
   "usersAreTypingOthersAmountOtherPlural": "diğerleri",
   "usersAreTypingOthersAmountTyping": "yazıyorlar",
